job listings recycler view
- front end needs work

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="internship_connect">Internship\nConnect</string>
 
     <string name="jobs">Jobs</string>
+    <string name="currentJobListing">Current Job Listing</string>
     <string name="my_jobs">My Jobs</string>
     <string name="companies">Companies</string>
     <string name="profile">Profile</string>
