--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
     <string name="cancel">Cancel</string>
 
     <string name="add_internship">Add Internship</string>
+    <string name="contact_us">Contact Us</string>
+    <string name="learn_more">Learn More</string>
 
     <string-array name="function_list">
         <item>Function 1</item>
