sidebar for all company pages

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@
     <string name="add_internship">Add Internship</string>
     <string name="contact_us">Contact Us</string>
     <string name="learn_more">Learn More</string>
+    <string name="open">Open</string>
+    <string name="close">Close</string>
 
     <string-array name="function_list">
         <item>Function 1</item>
