change text to string --> strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,14 +8,21 @@
     <string name="jobs">Jobs</string>
     <string name="currentJobListing">Current Job Listing</string>
     <string name="my_jobs">My Jobs</string>
+    <string name="my_internships">My Internships</string>
     <string name="companies">Companies</string>
     <string name="profile">Profile</string>
     <string name="about">About</string>
     <string name="contactUs">Contact Us</string>
     <string name="learnMore">Learn More</string>
+    <string name="edit">Edit</string>
 
     <string name="company">Company</string>
     <string name="intern">Intern</string>
+    <string name="company_name">Company Name</string>
+    <string name="industry">Industry</string>
+    <string name="contact_number">Contact Number</string>
+    <string name="location">Location</string>
+    <string name="website"></string>
 
     <string name="edit_profile">Edit Profile</string>
     <string name="save">Save</string>
@@ -26,6 +33,39 @@
     <string name="learn_more">Learn More</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
+    <string name="title">Title</string>
+    <string name="description">Description</string>
+    <string name="function">Function</string>
+    <string name="type">Type</string>
+    <string name="link">Link</string>
+    <string name="add">Add</string>
+
+    <string name="internship_title">Internship Title</string>
+    <string name="applicants">Applicants</string>
+    <string name="intern_name">Intern Name</string>
+    <string name="experience">Experience</string>
+    <string name="education">Education</string>
+    <string name="name">Name</string>
+    <string name="educationn">EDUCATION</string>
+    <string name="school">School</string>
+    <string name="course">Course</string>
+    <string name="expected_graduation_year">Expected Graduation Year</string>
+    <string name="share_your_experience">Share Your Experience!</string>
+    <string name="facebook">Facebook</string>
+    <string name="instagram">Instagram</string>
+    <string name="twitter">Twitter</string>
+    <string name="apply">Apply</string>
+    <string name="share">Share</string>
+    <string name="update">Update</string>
+    <string name="update_experience">Update Experience</string>
+    <string name="start_date">Start Date</string>
+    <string name="end_date">End Date</string>
+    <string name="available_internships">Available Internships</string>
+    <string name="internship_openings">Internship Openings</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="i_am_applying_as">I am applying as</string>
+    <string name="name">Name</string>
 
     <string-array name="function_list">
         <item>Function 1</item>
