--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,7 @@
     <string name="password">Password</string>
     <string name="i_am_applying_as">I am applying as</string>
     <string name="name">Name</string>
+    <string name="websitee">Website</string>
 
     <string-array name="function_list">
         <item>Technology/Software Development</item>
